Fix dockerfile and add subprocess client

--- a/Dockerfile.controller
+++ b/Dockerfile.controller
@@ -1,16 +1,7 @@
 FROM python:2
-RUN pip install docker==2.1.0
-RUN pip install kubernetes
-RUN pip install pycurl
+RUN pip install docker==2.1.0 kubernetes pycurl
 WORKDIR "/root/"
 RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
-RUN chmod +x ./kubectl
-RUN mv ./kubectl /usr/local/bin/kubectl
-COPY __init__.py __init__.py
-COPY netclass.py netclass.py
-COPY netcontrol.py netcontrol.py
-COPY maincontrol.py maincontrol.py
-COPY settings.py settings.py
-COPY config.json config.json
+RUN chmod +x ./kubectl && mv ./kubectl /usr/local/bin/kubectl
+COPY *.py *.json /root/
 CMD ["python","-u","maincontrol.py","-v"]
-#CMD while true; do echo 'Hit CTRL+C'; sleep 1; done
