--- a/config.json
+++ b/config.json
@@ -3,8 +3,9 @@
     "ctlloc" : "in",
     "default_class": "HP",
     "period": 5,
+    "slack_threshold_disable": -0.05,
     "slack_threshold_shrink": 0.05,
-    "slack_threshold_grow": 0.1,
+    "slack_threshold_grow": 0.15,
     "load_threshold_shrink": 90.0,
     "load_threshold_grow": 75.0,
     "min_shares": 2,
