--- a/config.json
+++ b/config.json
@@ -9,6 +9,8 @@
     "load_threshold_shrink": 80.0,
     "load_threshold_grow": 60.0,
     "min_shares": 2,
+    "max_be_quota": 1000,
+    "min_be_quota": 0.1,
     "BE_growth_rate": 1.1,
     "BE_shrink_rate": 0.9,
     "net_period": 2,
