Quota controller algo modification and param tuning

--- a/config.json
+++ b/config.json
@@ -3,16 +3,19 @@
     "ctlloc" : "in",
     "default_class": "HP",
     "period": 5,
-    "slack_threshold_disable": -0.2,
-    "slack_threshold_shrink": 0.1,
+    "slack_threshold_disable": -0.5,
+    "slack_threshold_reset": -0.2,
+    "slack_threshold_shrink": 0.05,
     "slack_threshold_grow": 0.2,
-    "load_threshold_shrink": 80.0,
+    "load_threshold_shrink": 75.0,
     "load_threshold_grow": 60.0,
     "min_shares": 2,
-    "max_be_quota": 0.8,
+    "max_be_quota": 0.6,
     "min_be_quota": 0.05,
     "BE_growth_rate": 1.1,
     "BE_shrink_rate": 0.8,
+    "BE_growth_ratio": 0.2,
+    "BE_shrink_ratio": 1.0,
     "net_period": 2,
     "iface_ext": "ens3",
     "iface_cont": "weave",
