--- a/config.json
+++ b/config.json
@@ -1,27 +1,32 @@
 {
     "mode" : "k8s",
     "ctlloc" : "in",
-    "default_class": "HP",
-    "period": 5,
-    "slack_threshold_disable": -0.5,
-    "slack_threshold_reset": -0.2,
-    "slack_threshold_shrink": 0.05,
-    "slack_threshold_grow": 0.2,
-    "load_threshold_shrink": 75.0,
-    "load_threshold_grow": 60.0,
-    "min_shares": 2,
-    "max_be_quota": 0.6,
-    "min_be_quota": 0.05,
-    "BE_growth_rate": 1.1,
-    "BE_shrink_rate": 0.8,
-    "BE_growth_ratio": 0.2,
-    "BE_shrink_ratio": 1.0,
-    "net_period": 2,
-    "iface_ext": "ens3",
-    "iface_cont": "weave",
-    "link_bw_mbps" : 10000,
-    "max_bw_mbps" : 700,
-    "quota_controller_disabled": false,
-    "net_controller_disabled": false,
+    "quota_controller": {
+      "period": 5,
+      "slack_threshold_disable": -0.5,
+      "slack_threshold_reset": -0.2,
+      "slack_threshold_shrink": 0.05,
+      "slack_threshold_grow": 0.2,
+      "load_threshold_shrink": 75.0,
+      "load_threshold_grow": 60.0,
+      "min_shares": 2,
+      "max_be_quota": 0.6,
+      "min_be_quota": 0.05,
+      "BE_growth_rate": 1.1,
+      "BE_shrink_rate": 0.8,
+      "BE_growth_ratio": 0.2,
+      "BE_shrink_ratio": 1.0,
+      "disabled": false,
+      "write_metrics": false
+    },
+    "net_controller": {
+      "period": 2,
+      "iface_ext": "ens3",
+      "iface_cont": "weave",
+      "link_bw_mbps" : 10000,
+      "max_bw_mbps" : 700,
+      "disable": false,
+      "write_metrics": false
+    },
     "write_metrics": false
 }
