1. add unit test code 2. move netclass test into tests directory 3. parameterized class InfluxWriter write function and extract influxdb connection info into config.json 4. add .applatix test control code 5. add requirements.txt which pip can bootstrap deployment environment by pip install -r requirements.txt 6. modify run_tests.sh, let unit test process discover all tests under project

--- a/config.json
+++ b/config.json
@@ -1,6 +1,13 @@
 {
-    "mode" : "k8s",
-    "ctlloc" : "in",
+    "mode": "k8s",
+    "ctlloc": "in",
+    "influx_db": {
+      "host": "influxsrv.hyperpilot",
+      "port": 8086,
+      "user": "root",
+      "password": "root",
+      "db": "be_controller"
+    },
     "quota_controller": {
       "period": 5,
       "slack_threshold_disable": -0.5,
